--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = warthog_msgs
-	base = bd94286
-	trimbase = 
+	base = 997430c
+	trimbase = bd94286
 	parent = upstream
 	previous = a2ee2dc
