--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = warthog_description
-	base = 7221f76
-	trimbase = 
+	base = e12b8b6
+	trimbase = 7221f76
 	parent = upstream
 	previous = a2ee2dc
