--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = warthog_control
-	base = e2e7191
-	trimbase = 
+	base = 9cdc868
+	trimbase = e2e7191
 	parent = upstream
 	previous = a2ee2dc
