--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 997430c
+	base = dfdc108
 	trimbase = 
 	parent = release/kinetic/warthog_msgs
-	previous = 
+	previous = 997430c
