--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 72f8ab3
+	base = 0a4aff7
 	trimbase = 
 	parent = arch/kinetic/warthog_msgs
-	previous = 
+	previous = 72f8ab3
