--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9cdc868
+	base = 237a5b2
 	trimbase = 
 	parent = release/kinetic/warthog_control
-	previous = 
+	previous = 9cdc868
