--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 240f125
+	base = c57f145
 	trimbase = 
 	parent = arch/kinetic/warthog_control
-	previous = 
+	previous = 240f125
