--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e12b8b6
+	base = 0c9195b
 	trimbase = 
 	parent = release/kinetic/warthog_description
-	previous = 
+	previous = e12b8b6
