--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c834bec
+	base = cc156eb
 	trimbase = 
 	parent = arch/kinetic/warthog_description
-	previous = 
+	previous = c834bec
